--- a/styles.css
+++ b/styles.css
@@ -351,3 +351,73 @@ h2 {
     margin-top: 20px;
   }
 }
+
+.my-projects {
+  text-align: left;
+  padding-left: 20px;
+}
+
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+  gap: 1rem 1rem;
+}
+
+.project-card {
+  display: flex;
+  flex-direction: column;
+  padding: 1.5rem;
+  border-radius: 10px;
+  border: 1px solid var(--color-secondary);
+  justify-content: center;
+  box-shadow: 0 10px 30px -15px var(--color-light-background);
+  transition: all .25s ease;
+  background-color: var(--color-dark-background);
+  color: var(--color-primary);
+}
+
+.project-image {
+  position: relative;
+  height: 250px;
+  overflow: hidden;
+  text-align: center;
+}
+
+.project-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.project-detail {
+  text-align: center;
+}
+
+.project-title {
+  font-size: 22px;
+  line-height: 24px;
+  font-weight: 700;
+  margin: 15px 0 0;
+}
+
+.project-description {
+  font-size: 17px;
+  line-height: 1.5rem;
+}
+
+.project-tag {
+  background: var(--color-notification);
+  vertical-align: middle;
+  align-items: center;
+  border-radius: 8px;
+  display: inline-flex;
+  font-size: .75rem;
+  height: 2em;
+  justify-content: center;
+  white-space: nowrap;
+  line-height: 1.5;
+  margin: 0 .5rem .5rem 0;
+  padding: 0.75em;
+  cursor: pointer;
+  transition: .2s ease-in;
+}
