--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ h2 {
   left: 0;
   width: 0;
   height: 2px;
-  background-color: var(--color-interactive);
+  background-color: var(--color-critical);
   transition: width 0.3s ease-in-out;
 }
 
@@ -421,3 +421,140 @@ h2 {
   cursor: pointer;
   transition: .2s ease-in;
 }
+
+.contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
+
+.contact-details {
+  flex: 1;
+  text-align: center;
+  margin-right: 10px; /* Add right margin */
+}
+
+.contact-details h2 {
+  font-size: 65px;
+  font-weight: 400;
+}
+
+.contact-email {
+  margin-top: 20px;
+  font-size: 40px;
+  font-weight: 400;
+  text-decoration: none;
+  color: var(--color-interactive);
+}
+
+.social-icons .contact {
+  text-align: center;
+}
+
+.contact-image {
+  width: 400px;
+  height: 400px;
+  margin-left: 10px; /* Add left margin */
+  position: relative;
+  z-index: 1;
+}
+
+.contact-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.contact-image-label {
+  display: block;
+  font-size: 24px;
+  font-weight: 400;
+  margin-top: 1rem;
+  text-align: center;
+  color: var(--color-critical);
+}
+.glitch-wrapper {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.glitch-image {
+  position: relative;
+  animation: glitch 2s infinite;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@keyframes glitch {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-5px, -5px);
+  }
+  40% {
+    transform: translate(5px, 5px);
+  }
+  60% {
+    transform: translate(-5px, 5px);
+  }
+  80% {
+    transform: translate(5px, -5px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+
+.typewriter {
+  overflow: hidden;
+  white-space: nowrap;
+  animation: typewriter 3s steps(40) 1s infinite;
+}
+
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+.system-reset-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  background-color: #000;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  z-index: 100;
+}
+
+.system-reset-button i {
+  margin-right: 5px;
+}
+
+.system-reset-button:hover {
+  background-color: #444;
+}
+
+.system-reset-button:focus {
+  outline: none;
+}
+
+/* Add the retro styling to the button */
