Refactored and Organised directories

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
   
   @font-face {
     font-family: 'Square Sans Serif 7';
-    src: url('square_sans_serif_7.ttf') format('truetype');
+    src: url('../fonts/square_sans_serif_7.ttf') format('truetype');
   }
   
   body {
